--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "antd": "^4.9.3",
+    "babel-plugin-import": "^1.13.3",
+    "customize-cra": "^1.0.0",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.7",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "build:dev": "cross-env REACT_APP_ENV=development react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "config-overrides-path": "config/config-overrides.js",
   "browserslist": {
     "production": [
       ">0.2%",
+      "not ie <=8 ",
       "not dead",
       "not op_mini all"
     ],
@@ -39,5 +40,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "husky": "^4.3.6",
+    "less": "^3.13.0",
+    "less-loader": "^7.1.0",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1"
   }
 }
